# anki-passfail3

./: README.md  config.json  config.md  configparser.py  manifest.json  passfail2.py  pyproject.toml
.github/workflows/: main.yml  release.yml
src/: manifest.json
